--- a/Hotel-Analysis.ipynb
+++ b/Hotel-Analysis.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Loading the Dataset"
+    "#Loading the Dataset"
    ]
   },
   {
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exploratory Data Analysis and Data Cleaning"
+    "#Exploratory Data Analysis and Data Cleaning"
    ]
   },
   {
@@ -2174,7 +2174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data Analysis and Visualizations"
+    "#Data Analysis and Visualizations"
    ]
   },
   {
